[project]
name = "coding-interviews-prep"
version = "0.1.0"
description = "Senior Backend interview problems with tests and complexity analysis"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
